--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
                 Dr Norman Borlaug </h1>
                 <p>The man who saved a billion lives</p>
         </div>
-       
+        <div id="imd-div">
+            <img src="./Screenshot (84).png" alt="Dr's image" id="image">
+            <caption id="img caption">
+                Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.
+            </caption>
+        </div>
+
+
     </main>
 </body>
 </html>
