--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
                 <li>2009 - dies at the age of 95.</li>
             </ul>
         </div>
+        <div>
+            <p>
+                "Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."
+            </p>
+            <p>
+                -- Indian Prime Minister Manmohan Singh
+            </p>
+        </div>
+        <div>
+           <span id="tribute-link">
+            If you have time, you should read more about this incredible human being on his 
+            <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="blank">Wikipedia Entry</a>
+           </span> 
+        </div>
     </main>
 </body>
 </html>
