--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
                 Dr Norman Borlaug </h1>
                 <p>The man who saved a billion lives</p>
         </div>
-        <div id="imd-div">
+        <figure id="img-div">
             <img src="./Screenshot (84).png" alt="Dr's image" id="image">
-            <caption id="img caption">
+            <figcaption id="img-caption">
                 Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.
-            </caption>
-        </div>
+            </figcaption>
+        </figure>
         <div id="tribute-info">
             <h2>
                 Here's a time line of Dr. Borlaug's life:
@@ -53,7 +53,7 @@
         <div>
            <span id="tribute-link">
             If you have time, you should read more about this incredible human being on his 
-            <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="blank">Wikipedia Entry</a>
+            <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia Entry</a>
            </span> 
         </div>
     </main>
