--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div>
             <h1 id="title">
                 Dr Norman Borlaug </h1>
-                <p>The man who saved a billion lives</p>
+                <p id="title">The man who saved a billion lives</p>
         </div>
         <figure id="img-div">
             <img src="./Screenshot (84).png" alt="Dr's image" id="image">
