--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li><span id="year">2009</span> - dies at the age of 95.</li>
             </ul>
         </div>
-        <div>
+        <div class="conclusion">
             <p>
                 "Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."
             </p>
@@ -50,8 +50,8 @@
                 -- Indian Prime Minister Manmohan Singh
             </p>
         </div>
-        <div>
-           <span id="tribute-link">
+        <div id="tribute-link">
+           <span>
             If you have time, you should read more about this incredible human being on his 
             <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia Entry</a>
            </span> 
